k8s_windows/eventify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventify-nginx
  namespace: pfe
spec:
  selector:
    app: eventify-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
