k8s_windows/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventify-pg
  namespace: pfe
spec:
  selector:
    app: eventify-pg
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
