k8s_windows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventify-ingress
  namespace: pfe
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: back.eventify.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventify-nginx
                port:
                  number: 80
